# Khala-Agentic-AI-Teams

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_unified_api.py
agents/software_engineering_team/: AGENT_CHANGES_APPLICABILITY.md  README.md  __init__.py  conftest.py  orchestrator.py  planning_v2_adapter.py  pyproject.toml  spec_parser.py
software_engineering_team/: README.md  orchestrator.py  pyproject.toml  requirements.txt  spec_parser.py
software_engineering_team/acceptance_verifier_agent/: __init__.py  models.py
software_engineering_team/accessibility_agent/: models.py
software_engineering_team/agent_implementations/: run_api_server.py  run_team.py
software_engineering_team/api/: main.py
software_engineering_team/api_contract_planning_agent/: __init__.py
software_engineering_team/architecture_agent/: agent.py  prompts.py
software_engineering_team/backend_agent/: __init__.py  agent.py  models.py  prompts.py
software_engineering_team/backend_planning_agent/: __init__.py  agent.py  models.py  prompts.py
software_engineering_team/code_review_agent/: agent.py  chunk_reviewer.py  coordinator.py  models.py
software_engineering_team/data_planning_agent/: __init__.py  agent.py  models.py  prompts.py
software_engineering_team/dbc_comments_agent/: __init__.py  models.py  prompts.py
software_engineering_team/devops_agent/: agent.py  models.py  prompts.py
software_engineering_team/devops_planning_agent/: agent.py  models.py
software_engineering_team/devops_review_agent/: __init__.py  agent.py  models.py
software_engineering_team/docs/: spec-clarification-chat-agent-plan.md
software_engineering_team/documentation_agent/: __init__.py  agent.py  models.py  prompts.py
software_engineering_team/documentation_planning_agent/: __init__.py  agent.py  models.py  prompts.py
software_engineering_team/frontend_agent/: agent.py  models.py  prompts.py
software_engineering_team/frontend_planning_agent/: agent.py  models.py  prompts.py
software_engineering_team/frontend_team/: __init__.py  orchestrator.py
software_engineering_team/git_setup_agent/: __init__.py  models.py
software_engineering_team/infrastructure_planning_agent/: __init__.py
software_engineering_team/integration_agent/: __init__.py
software_engineering_team/integration_team/: __init__.py
software_engineering_team/observability_planning_agent/: __init__.py
software_engineering_team/performance_planning_agent/: __init__.py  agent.py  models.py  prompts.py
software_engineering_team/performance_planning_doc_agent/: __init__.py
software_engineering_team/planning/: __init__.py  planning_consolidation.py  planning_graph.py  planning_review.py  validation.py
software_engineering_team/planning_team/: __init__.py  plan_patterns.py
software_engineering_team/project_planning_agent/: __init__.py  agent.py  models.py  prompts.py
software_engineering_team/qa_agent/: agent.py  models.py  prompts.py
software_engineering_team/qa_test_strategy_agent/: prompts.py
software_engineering_team/quality_gate_planning_agent/: __init__.py
software_engineering_team/quality_gates/: README.md
software_engineering_team/repair_agent/: agent.py  models.py
software_engineering_team/security_agent/: agent.py  models.py
software_engineering_team/security_planning_agent/: models.py  prompts.py
software_engineering_team/shared/: clarification_store.py  command_runner.py  context_sizing.py  development_plan_writer.py  error_parsing.py  execution_tracker.py  git_utils.py  job_store.py  llm.py  llm_response_utils.py  logging_config.py  models.py  prompt_utils.py  repo_writer.py  task_cache.py  task_parsing.py
software_engineering_team/spec_intake_agent/: __init__.py  agent.py  models.py  prompts.py
software_engineering_team/tech_lead_agent/: agent.py  models.py  prompts.py
software_engineering_team/test_planning_agent/: __init__.py  agent.py  models.py  prompts.py
software_engineering_team/tests/: __init__.py  test_api.py  test_architecture_agent.py  test_backend_agent.py  test_chunk_reviewer.py  test_code_review_agent.py  test_code_review_coordinator.py  test_command_runner.py  test_devops_agent.py  test_error_parsing.py  test_frontend_agent.py  test_frontend_integration.py  test_frontend_team.py  test_llm.py  test_orchestrator.py  test_orchestrator_npm.py  test_plan_folder.py  test_plan_implementation.py  test_planning_graph.py  test_planning_robustness.py  test_planning_validation.py  test_prompt_utils.py  test_repair_agent.py  (+5 more)
(+3139 files in other folders)
