[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "software-engineering-team"
version = "0.1.0"
description = "A multi-agent software engineering team: Tech Lead, Architecture, DevOps, Security, Backend, Frontend, QA."
authors = [{ name = "Strands Agent", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.8,<3.0",
    "httpx>=0.27,<0.28",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Show logs during tests: -v shows INFO, or use: pytest --log-cli-level=INFO
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "software_engineering_team*",
    "architecture_agent*",
    "tech_lead_agent*",
    "devops_agent*",
    "security_agent*",
    "backend_agent*",
    "frontend_agent*",
    "qa_agent*",
]
namespaces = false
