[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "software-engineering-team"
version = "0.1.0"
description = "A multi-agent software engineering team: Tech Lead, Architecture, DevOps, Security, Backend, Frontend, QA."
authors = [{ name = "Strands Agent", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.8,<3.0",
    "httpx>=0.27,<0.28",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "architect-agents"]
# Show logs during tests: -v shows INFO, or use: pytest --log-cli-level=INFO
addopts = "-v"

[tool.coverage.run]
source = ["shared", "frontend_team"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "shared/models.py",
    "shared/git_utils.py",
    "shared/repo_writer.py",
    "shared/llm.py",
    "shared/job_store.py",
    "shared/coding_standards.py",
    "shared/logging_config.py",
    "shared/task_validation.py",
    "shared/development_plan_writer.py",
    "shared/__init__.py",
]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "software_engineering_team*",
    "architect-agents*",
    "tech_lead_agent*",
    "devops_agent*",
    "security_agent*",
    "backend_agent*",
    "frontend_team*",
    "qa_agent*",
]
namespaces = false
